5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1793_1593.log
== TEST (2019-05-30 18:03:18) 
-- CODE:
from numpy import * 
notas = array(input(eval("digite os pesos: ")))
pesos = arange(size(notas),dtype = int)
pesos  = pesos + 1
média = sum(pesos*notas)/size(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:03:32) 
-- CODE:
from numpy import * 
notas = array(eval(input("digite os pesos: ")))
pesos = arange(size(notas),dtype = int)
pesos  = pesos + 1
média = sum(pesos*notas)/size(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:04:02) 
-- CODE:
from numpy import * 
notas = array(eval(input("digite os pesos: ")))
pesos = arange(size(notas),dtype = int)
pesos  = pesos + 1
media = sum(pesos*notas)/size(notas)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:04:43) 
-- CODE:
from numpy import * 
notas = array(eval(input("digite os pesos: ")))
pesos = arange(size(notas),dtype = int)
pesos  = pesos + 1
media = sum(pesos*notas)/size(notas)
print(media)
print(pesos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:04:49) 
-- CODE:
from numpy import * 
notas = array(eval(input("digite os pesos: ")))
pesos = arange(size(notas),dtype = int)
pesos  = pesos + 1
media = sum(pesos*notas)/size(notas)
print(media)
print(pesos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:05:08) 
-- CODE:
from numpy import * 
notas = array(eval(input("digite os pesos: ")))
pesos = arange(size(notas),dtype = int)
pesos  = pesos + 1
media = sum(pesos*notas)/size(notas)
print(media)
print(pesos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:05:34) 
-- CODE:
from numpy import * 
notas = array(eval(input("digite os pesos: ")))
pesos = arange(size(notas),dtype = int)
pesos  = pesos + 1
media = sum(pesos*notas)/size(notas)
print(media)
print(pesos*notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:06:21) 
-- CODE:
from numpy import * 
notas = array(eval(input("digite os pesos: ")))
pesos = arange(size(notas),dtype = int)
pesos  = pesos + 1
media = (sum(pesos*notas))/(sum(pesos))
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:06:48) 
-- CODE:
from numpy import * 
notas = array(eval(input("digite os pesos: ")))
pesos = arange(size(notas),dtype = int)
pesos  = pesos + 1
media = (sum(pesos*notas))/(sum(pesos))
print(round(media,2)


-- EXECUTION TIME:
0.143766
-- ERROR:
  File "/home/codebench/codes/1793/1593/main.py", line 8
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:06:51) 
-- CODE:
from numpy import * 
notas = array(eval(input("digite os pesos: ")))
pesos = arange(size(notas),dtype = int)
pesos  = pesos + 1
media = (sum(pesos*notas))/(sum(pesos))
print(round(media,2))


-- EXECUTION TIME:
0.400736
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
1.05
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
2.53
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
